fix overflow, alignment in connectedServicePicker

--- a/packages/app/client/src/ui/shell/explorer/servicesExplorer/connectedServicePicker/connectedServicePicker.scss
+++ b/packages/app/client/src/ui/shell/explorer/servicesExplorer/connectedServicePicker/connectedServicePicker.scss
@@ -9,6 +9,10 @@
 
 .checkbox-override {
   display: inline-block;
+
+  & > span {
+    margin-top: 3px;
+  }
 }
 
 .select-all {
@@ -21,6 +25,7 @@
     font-size: 13px;
     margin: 0;
     padding-bottom: 20px;
+    
     &:last-child {
       padding: 0 0 48px 0;
     }
@@ -29,26 +34,17 @@
   & > ul {
     list-style: none;
     margin: 0;
-    padding: 5px 0 0 0;
     max-height: 96px;
     overflow: auto;
+    padding: 5px 0 0 0;
+
     > li {
-      padding: 0 10px;
       background-color: #efefef;
       height: 24px;
-      & > span {
-        color: #777;
-        width: 50%;
-        &:last-child {
-          width: 25px;
-          text-align: left;
-          padding-right: 10px;
-          float: right;
-        }
-      }
-      &:nth-child(odd) {
-        background-color: white;
-      }
+      overflow: hidden;
+      padding: 5px 10px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
